--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,28 @@
 @import url('https://fonts.googleapis.com/css?family=Concert+One&display=swap');
 
-html {
+html, body {
     font-family: 'Concert One', cursive;
 }
 
 .page-header {
     background-color:skyblue;
-    height: 10vh;
     /* text-align: center; */
-    /* display: flex; 
-    justify-content: space-between; */
-    display: inline-block;
+    
     
 }
+
+ul {
+    text-align: center;
+}
+li {
+    display: inline-block;
+    text-align: center;
+    margin-left: 5px;
+    justify-content: space-between;
+    
+    
+}
+
 
 .wrapper{
     padding: 20px 0;
@@ -27,6 +37,7 @@ html {
 
 .header__logo {
     height:10vh;
+    align-content: flex-end;
 } 
 
 .header__image {
@@ -44,8 +55,8 @@ html {
 
 
 
-.aboutus {
-    background: #2D5E8F;
+.row {
+    
     padding: 100px 0;
 }
 
@@ -63,4 +74,9 @@ html {
 .missionstatement {
     height: 30vh;
     background-image: url("https://cdn.pixabay.com/photo/2015/07/29/12/08/hot-air-balloon-865819_1280.jpg");
+}
+
+.page-footer{
+    background: rgb(127, 150, 173);
+    height: 10vh;
 }
